# soul-listener

./: .cargo-machete.toml  .gitignore  .pre-commit-config.yaml  ASPECT_RATIO_LOCKED_RESIZE.md  CLAUDE.md  CLEANUP_COMPLETE.md  COMPONENTS_IMPLEMENTATION.md  Cargo.toml  DAP_FOUNDATION_PLAN.md  Embed.toml  FINAL_SESSION_UPDATE.md  FIRMWARE_CRATE_SUMMARY.md  GDEM0397T81P_IMPLEMENTATION.md  HOT_RELOAD_TEST.md  LICENSE  LUT_IMPLEMENTATION_SUMMARY.md  MENU_SCENE_IMPLEMENTATION.md  MULTI_MONITOR_DPI_FIX.md  MULTI_MONITOR_DPI_FIX_FINAL.md  MULTI_MONITOR_DPI_REAL_SOLUTION.md  PHASE4_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  ROTATION_AND_SCALING.md  ROTATION_FIX_SUMMARY.md  SESSION_SUMMARY.md  STABILIZATION_COMPLETE.md  TASK3_VALIDATION_REPORT.md  clippy.toml  deny.toml  example_luts.json  memory.x
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  hardware.yml
crates/bluetooth/: Cargo.toml
crates/bluetooth/src/: hci.rs  lib.rs  state.rs
crates/bluetooth/tests/: hci_safety.rs
crates/eink/: CLAUDE.md  HAL_ABSTRACTION.md  ROADMAP.md
crates/eink/eink-components/: Cargo.toml
crates/eink/eink-components/examples/: components_demo.rs
crates/eink/eink-components/src/: button.rs  icon.rs  label.rs  lib.rs  progress_bar.rs
crates/eink/eink-emulator/: Cargo.toml  PHASE2_COMPLETE.md  README.md  test_gray4.rs
crates/eink/eink-emulator/docs/: DEBUG.md
crates/eink/eink-emulator/examples/: custom_lut_demo.rs  dap_display_demo.rs  debug_demo.rs  hello_window.rs  initialization_demo.rs  partial_window_demo.rs  phase2_demo.rs  phase2_visual.rs  power_optimization_demo.rs  quirk_demo.rs  robust_physics_demo.rs  rotation_demo.rs  spec_emulation.rs  tricolor_demo.rs
crates/eink/eink-emulator/src/: alignment.rs  config.rs  display_driver.rs  framebuffer.rs  initialization.rs  input.rs  lib.rs  lut.rs  partial_window.rs  pixel_color.rs  pixel_state.rs  power.rs  refresh_mode.rs  temp_patch.txt  waveform_mode.rs  window.rs
crates/eink/eink-emulator/src/debug/: inspector.rs  manager.rs  mod.rs  overlay.rs  panel.rs  power_graph.rs  state.rs
crates/eink/eink-emulator/tests/: E2E_TEST_ANALYSIS.md  debug_e2e_visual.rs  debug_integration.rs  debug_showcase.rs  lut_tests.rs  partial_window_tests.rs  power_tests.rs  quirk_tests.rs  tricolor_tests.rs
crates/eink/eink-specs/: Cargo.toml  README.md
crates/eink/eink-specs/examples/: display_info.rs  serde_example.rs
crates/eink/eink-specs/src/: controller_quirks.rs  display_spec.rs  lib.rs
crates/eink/eink-specs/src/displays/: gooddisplay.rs  mod.rs  waveshare.rs
crates/eink/eink-system/: Cargo.toml
crates/eink/eink-system/examples/: layout_demo.rs
crates/eink/eink-system/src/: containers.rs  debug.rs  flex.rs  layout.rs  lib.rs  render.rs  style.rs
crates/eink/eink-system/tests/: e2e_layout.rs
crates/eink/eink-system/tests/screenshots/: README.md
crates/eink/eink-testing/: Cargo.toml
crates/eink/eink-testing/src/: lib.rs
crates/eink/eink-testing/tests/: arch_completeness.rs  basic.rs  completeness.rs
crates/eink/tasks/: README.md  phase-0-foundation.md  phase-1-display-specs.md  phase-2-core-emulation.md  phase-3-layout-system.md  phase-4-components.md  phase-5-testing.md  phase-6-polish.md  (+1 more)
crates/firmware/: Cargo.toml  Embed.toml  FIRMWARE_COMPLETE.md  QUICK_START.md  README.md  build.rs
crates/firmware-ui/: Cargo.toml  build.rs
crates/firmware-ui/src/: lib.rs  render.rs
crates/firmware-ui/src/screens/: mod.rs  now_playing.rs
crates/firmware-ui/tests/: now_playing_visual.rs
crates/firmware/.cargo/: config.toml
crates/firmware/examples/: display_emulator.rs  display_emulator_test.rs  display_hardware_test.rs  menu_scene.rs  menu_screenshot.rs  now_playing_scene.rs  screenshot_test.rs
crates/firmware/src/: boot.rs  dma.rs  exception_handlers.rs  lib.rs  main.rs  sdram.rs
crates/firmware/src/audio/: clock_math.rs  mod.rs  sai_recovery.rs  sai_task.rs
crates/firmware/src/audio/amp/: mock.rs  mod.rs
crates/firmware/src/audio/amp/tpa6120a2/: driver.rs  mod.rs
crates/firmware/src/audio/dac/: mock.rs  mod.rs
crates/firmware/src/audio/dac/es9038q2m/: driver.rs  mod.rs  registers.rs
crates/firmware/src/display/: driver.rs  emulator.rs  mod.rs
crates/firmware/src/hal/: mod.rs
crates/firmware/src/input/: builder.rs  hardware.rs  mod.rs
crates/firmware/src/ui/: mod.rs
crates/firmware/tests/: arch_boundaries.rs  dependency_audit.rs  elf_sections.rs  integration_audio.rs  integration_boot.rs  integration_boot_sequence.rs  integration_display.rs  memory_safety.rs
crates/platform/: CLAUDE.md  Cargo.toml
crates/platform/src/: asset_store.rs  audio.rs  audio_config.rs  audio_sequencer.rs  audio_types.rs  bluetooth.rs  bq25895.rs  clock_config.rs  config.rs  display.rs  dma.rs  dma_safety.rs  es9038q2m.rs  gpio.rs  input.rs  lib.rs  mpu.rs  peripheral.rs  power.rs  qspi_config.rs  sdram.rs  soul_library.rs  storage.rs  storage_config.rs  storage_local.rs  storage_sdmmc.rs
crates/platform/src/mocks/: mod.rs
crates/platform/tests/: audio_math_proptest.rs  audio_sequencer.rs  dma_safety.rs  newtypes.rs
crates/playback/: Cargo.toml
crates/playback/src/: decoder.rs  engine.rs  lib.rs  mp3_decoder.rs  ring_buffer.rs  volume.rs
crates/ui/: Cargo.toml
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  AUDIO.md  BEST_PRACTICES.md  DEBUG_IMPLEMENTATION_SUMMARY.md  TESTING.md
docs/plans/: 2026-02-15-debug-system-design.md  2026-02-15-debug-system.md  2026-02-20-embedded-enforcement.md  2026-02-20-interactive-now-playing.md  2026-02-20-lint-and-arch-hardening.md  2026-02-20-speaker-system-design.md  2026-02-21-soul-library.md
hardware/: CLAUDE.md  README.md  ato-lock.yaml  ato.yaml
mechanical/: README.md
supply-chain/: audits.toml  config.toml
tests/hardware/: README.md  boot.rs  peripherals.rs
tools/: geiger-count.py
xtask/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TEST_XTASK.md  USAGE_EXAMPLES.md
xtask/src/: check.rs  dev.rs  doc.rs  flash.rs  hardware.rs  main.rs  scan_library.rs  test.rs
(+41 files in other folders)
