[workspace]
resolver = "2"
members = [
    "crates/eink/eink-specs",
    "crates/eink/eink-emulator",
    "crates/eink/eink-system",
    "crates/eink/eink-components",
    "crates/eink/eink-testing",
    "crates/platform",
    "crates/firmware",
    "crates/firmware-ui",
    "xtask",
    "crates/playback",
    "crates/ui",
    "crates/library",
    "crates/bluetooth",
    # TODO: Add when created
    # "crates/simulator",
]

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/soulaudio-dap"

[workspace.dependencies]
# PINNED: embassy crates have frequent breaking changes.
# Upgrade only after testing. Known issues:
#   embassy-executor 0.5.0: InterruptExecutor broken on STM32H7 (issue #2603)
#   embassy-stm32 open: SDMMC requires HSI48 (issue #3049), SAI OverrunError no recovery (issue #3205)
#   embassy-stm32 open: QSPI memory-mapped mode not implemented (issue #3149)
# Embassy async framework
embassy-executor = { version = "=0.6.3", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "=0.3.2" }   # tick rate set per-target (hardware: 32_768, desktop: std)
embassy-sync = "=0.6.2"
embassy-futures = "=0.1.2"

# Embassy HAL (STM32)
embassy-stm32 = { version = "=0.1.0", features = ["stm32h743zi", "time-driver-any", "unstable-pac", "exti"] }
embassy-embedded-hal = "=0.1.0"

# Embedded HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-storage = "0.3"
embedded-storage-async = "0.4"

# Graphics
embedded-graphics = "0.8.1"
embedded-layout = "0.4"
embedded-text = "0.8"

# Storage
embedded-sdmmc = "0.8"

# Audio
biquad = "0.4"
dasp = { version = "0.11", default-features = false }
rubato = "0.15"

# Collections (no_std)
heapless = "0.9"

# Error handling
thiserror-no-std = "2.0"
anyhow = { version = "1.0.100", default-features = false }

# Logging
defmt = "1"
defmt-rtt = "1"

# Utilities
static_cell = "2.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1"

# Development
panic-probe = { version = "1", features = ["print-defmt"] }
embedded-graphics-simulator = "0.6"

# Testing
embedded-test = "0.4"
tokio = { version = "1.49", features = ["macros", "rt"] }

# Hot-reload support (desktop emulator development only)
hot-lib-reloader = "0.8"

# Tracing (desktop / emulator only)
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (pinned here to prevent serde_core feature-split linker errors)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
opt-level = 1
debug = true
lto = false

[profile.release]
opt-level = "z"        # Optimize for size
lto = "fat"            # Full LTO
codegen-units = 1      # Better optimization
debug = true           # Keep debug symbols for probe-rs
strip = false          # Keep symbols for debugging
panic = "abort"        # No unwinding
overflow-checks = true # Safety checks
