[workspace]
resolver = "2"
members = [
    "crates/eink/eink-specs",
    "crates/eink/eink-emulator",
    "crates/eink/eink-system",
    "crates/eink/eink-components",
    "crates/eink/eink-testing",
    "crates/platform",
    "crates/firmware",
    "crates/firmware-ui",
    "xtask",
    "crates/playback",
    "crates/ui",
    "crates/library",
    "crates/bluetooth",
    # TODO: Add when created
    # "crates/simulator",
]


# ---------------------------------------------------------------------------
# defmt log-level configuration
#
# defmt uses the DEFMT_LOG environment variable at BUILD TIME (not runtime)
# to filter log strings compiled into the .defmt ELF section.
#
#   DEFMT_LOG=trace  -- all log strings compiled in (development)
#   DEFMT_LOG=debug  -- debug + info + warn + error (verbose-logging)
#   DEFMT_LOG=info   -- info + warn + error (default, set in .cargo/config.toml)
#   DEFMT_LOG=warn   -- warn + error only (production hardening)
#   DEFMT_LOG=error  -- error only (minimal .defmt section)
#   DEFMT_LOG=off    -- no log strings (smallest binary)
#
# IMPORTANT: DEFMT_LOG is NOT a runtime filter. It controls which format
# strings are compiled into the ELF. The .cargo/config.toml sets DEFMT_LOG=info
# as the default for all builds. Override for production hardening:
#
#   DEFMT_LOG=warn cargo build --release --target thumbv7em-none-eabihf ...
#
# verbose-logging: Use DEFMT_LOG=debug or DEFMT_LOG=trace for development.
# Production builds should use DEFMT_LOG=info (set in .cargo/config.toml).
# ---------------------------------------------------------------------------
[workspace.metadata.defmt]
# Log level used by .cargo/config.toml [env] section for all builds.
# Override at the command line: DEFMT_LOG=warn cargo build --release ...
default-log-level = "info"
# verbose-logging mode: DEFMT_LOG=debug or DEFMT_LOG=trace
verbose-logging = "debug"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
rust-version = "1.75"  # MSRV: Embassy requires ~1.75+; pin to prevent silent toolchain breakage
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/soulaudio-dap"

[workspace.dependencies]
# PINNED: embassy crates have frequent breaking changes.
# Upgrade only after testing. Known issues:
#   embassy-executor 0.5.0: InterruptExecutor broken on STM32H7 (issue #2603)
#   embassy-stm32 open: SDMMC requires HSI48 (issue #3049), SAI OverrunError no recovery (issue #3205)
#   embassy-stm32 open: QSPI memory-mapped mode not implemented (issue #3149)
# Embassy async framework
embassy-executor = { version = "=0.6.3", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "=0.3.2" }   # tick rate set per-target (hardware: 32_768, desktop: std)
embassy-sync = "=0.6.2"
embassy-futures = "=0.1.2"

# Embassy HAL (STM32)
embassy-stm32 = { version = "=0.1.0", features = ["stm32h743zi", "time-driver-tim2", "unstable-pac", "exti"] }
embassy-embedded-hal = "=0.1.0"

# Embedded HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-storage = "0.3"
embedded-storage-async = "0.4"

# Graphics
embedded-graphics = "0.8.1"
embedded-layout = "0.4"
embedded-text = "0.8"

# Storage
embedded-sdmmc = "0.8"

# Audio
biquad = "0.4"
dasp = { version = "0.11", default-features = false }
nanomp3 = "0.1"
rubato = "0.15"

# Binary serialisation — no_std, postcard v1 stable wire format
postcard = { version = "1", default-features = false, features = ["heapless"] }
# CRC32 — both std writer and no_std reader paths
crc32fast = { version = "1", default-features = false }

# Collections (no_std)
heapless = { version = "0.9", features = ["serde"] }

# Error handling
thiserror-no-std = "2.0"
anyhow = { version = "1.0.100", default-features = false }

# Logging
defmt = "1"
defmt-rtt = "1"

# Utilities
static_cell = "2.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1"

# Development
panic-probe = { version = "1", features = ["print-defmt"] }
embedded-graphics-simulator = "0.6"

# Testing
embedded-test = "0.4"
tokio = { version = "1.49", features = ["macros", "rt"] }

# Directory walk — xtask scan-library only (std)
walkdir = "2"
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Hot-reload support (desktop emulator development only)
hot-lib-reloader = "0.8"

# Tracing (desktop / emulator only)
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (pinned here to prevent serde_core feature-split linker errors)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
# Public APIs must have documentation.
# Suppressed in application/tooling crates with #![allow(missing_docs)].
missing_docs = "warn"

[workspace.lints.clippy]
# Safety-critical: every arithmetic op must be explicitly audited.
# Use checked_*/saturating_*/wrapping_* or add #[allow] at the specific site.
arithmetic_side_effects = "deny"
# Safety-critical: direct slice indexing panics on OOB. Use .get() instead.
indexing_slicing = "deny"
# Debug macros must not appear in committed code.
dbg_macro = "deny"
# Placeholder code must not reach production.
todo = "deny"
unimplemented = "deny"
# Holding a mutex/lock across an await point can deadlock async tasks.
await_holding_lock = "deny"

# Cast safety — warn on narrowing/sign-changing casts that may silently lose data.
# Prevents the class of bug where (x as u8).min(50) truncates before clamping;
# the correct form is x.min(50) as u8.
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"

# Every unsafe block must explain its safety invariant.
# Use "warn" not "deny" due to known proc-macro false positives in Embassy.
undocumented_unsafe_blocks = "warn"

# Panic-prevention: no silent panics in production firmware.
# Desktop crates (eink-emulator, eink-testing, xtask) suppress with #![allow].
# Hardware test modules suppress with #[allow] + SAFETY comment.
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

# Warn on arrays >512 bytes allocated on the stack.
# Large stack allocations overflow ISR stacks on STM32H7 (default 4 KB per task).
# Use StaticCell<[T; N]> or heapless::Vec<T, N> for large buffers.
large_stack_arrays = "warn"

# Warn when {:?} Debug format is used in non-test code.
# Debug output is verbose, unstable, and larger than purpose-written display strings.
# Use a match arm returning &'static str instead.
# Desktop crates may suppress with #[allow(clippy::use_debug)].
use_debug = "warn"

[profile.dev]
opt-level = 1
debug = true
lto = false
panic = "abort"           # No unwinding on embedded targets (saves ~10KB)

[profile.release]
opt-level = "z"        # Optimize for size
lto = "fat"            # Full LTO
codegen-units = 1      # Better optimization
debug = true           # Keep debug symbols for probe-rs
strip = false          # Keep symbols for debugging
panic = "abort"        # No unwinding
overflow-checks = true # Safety checks
