[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.100"
notify = "9.0.0-rc.1"
colored = "3.0"
platform = { path = "../crates/platform" }
walkdir = { workspace = true }
library = { path = "../crates/library", features = ["std"] }
heapless = { workspace = true }

# Optional: Desktop notifications (cross-platform)
notify-rust = { version = "4.12", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
notifications = ["notify-rust"]

[lints]
workspace = true
