[package]
name = "firmware"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Local crates
platform = { path = "../platform" }
eink-specs = { path = "../eink/eink-specs" }
eink-system = { path = "../eink/eink-system" }
eink-components = { path = "../eink/eink-components" }

# Embassy framework (hardware only)
embassy-executor = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
embassy-stm32 = { workspace = true, optional = true, features = ["stm32h743zi", "time-driver-any", "unstable-pac"] }
embassy-embedded-hal = { workspace = true, optional = true }

# Embedded HAL traits
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-bus = { workspace = true, optional = true }

# Graphics
embedded-graphics = { workspace = true }

# Collections (no_std)
heapless = { workspace = true }

# Error handling
thiserror-no-std = { workspace = true }

# Logging
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }

# Utilities (hardware only)
static_cell = { workspace = true, optional = true }
cortex-m = { workspace = true, optional = true }
cortex-m-rt = { workspace = true, optional = true }
critical-section = { workspace = true, optional = true }

# Panic handler (hardware only)
panic-probe = { workspace = true, optional = true }

# Emulator (desktop only)
eink-emulator = { path = "../eink/eink-emulator", optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"], optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

# Hot-reload support (emulator only, feature-gated)
firmware-ui = { path = "../firmware-ui", optional = true }
hot-lib-reloader = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = []

# Hardware target (STM32H7)
hardware = [
    "embassy-executor",
    "embassy-time",
    "embassy-time/tick-hz-32_768",  # hardware tick rate (moved from workspace default)
    "embassy-sync",
    "embassy-futures",
    "embassy-stm32",
    "embassy-embedded-hal",
    "embedded-hal-bus",
    "defmt",
    "defmt-rtt",
    "static_cell",
    "cortex-m",
    "cortex-m-rt",
    "critical-section",
    "panic-probe",
    # Propagate defmt to platform so cfg_attr(feature = "defmt", ...) derives activate.
    "platform/defmt",
]

# Desktop emulator target
emulator = [
    "eink-emulator",
    "tokio",
    "std",
    "dep:log",
    "dep:env_logger",
]

# Debug features (emulator only)
debug = [
    "emulator",
    "eink-emulator/debug",
]

# Keyboard + scroll-wheel input (emulator only)
keyboard-input = [
    "emulator",
    "eink-emulator/keyboard-input",
]

# True in-process hot-reload using hot-lib-reloader.
# Requires firmware-ui to be compiled as a cdylib first:
#   cargo build --package firmware-ui --features hot-reload
# Then run the emulator:
#   cargo run --example display_emulator --features emulator,hot-reload
hot-reload = [
    "emulator",
    "firmware-ui/hot-reload",
    "hot-lib-reloader",
]

# Standard library support
std = []

# Logging features
defmt-logging = ["defmt", "defmt-rtt"]

[lib]
name = "firmware"
test = true

[[bin]]
name = "firmware"
path = "src/main.rs"
required-features = ["hardware"]

[[example]]
name = "display_hardware_test"
path = "examples/display_hardware_test.rs"
required-features = ["hardware"]

[[example]]
name = "display_emulator"
path = "examples/display_emulator.rs"
required-features = ["emulator"]

[[example]]
name = "display_emulator_test"
path = "examples/display_emulator_test.rs"
required-features = ["emulator"]

[[example]]
name = "now_playing_scene"
path = "examples/now_playing_scene.rs"
required-features = ["emulator"]

[[example]]
name = "menu_scene"
path = "examples/menu_scene.rs"
required-features = ["emulator"]

[[example]]
name = "screenshot_test"
path = "examples/screenshot_test.rs"
required-features = ["emulator"]

[[example]]
name = "menu_screenshot"
path = "examples/menu_screenshot.rs"
required-features = ["emulator"]
