[package]
name = "platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Embassy — unconditional: this crate is Embassy-only.
# Consumers on desktop must activate embassy-time's "std" feature to satisfy
# the time-driver symbols (e.g. add `embassy-time = { workspace = true,
# features = ["std"] }` to their own Cargo.toml).
embassy-time.workspace = true
embassy-sync.workspace = true
embassy-futures.workspace = true

# Embedded HAL traits
embedded-hal.workspace = true
embedded-hal-async.workspace = true
embedded-io.workspace = true
embedded-io-async.workspace = true
embedded-storage.workspace = true
embedded-storage-async.workspace = true

# Graphics
embedded-graphics.workspace = true

# Collections
heapless.workspace = true

# Error handling
thiserror-no-std.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
proptest = "1"
# Provides the embassy-time std time-driver + software timer queue so that
# `cargo test -p platform` links without an embedded HAL driver.
# `std`         → time driver (implements _embassy_time_now)
# `generic-queue-8` → software queue (implements _embassy_time_schedule_wake)
embassy-time = { workspace = true, features = ["std", "generic-queue-8"] }

[features]
default   = []
std       = []
simulator = []
# Physical hardware target marker (no deps: embassy-time is always present).
hardware  = []
# Enable defmt::Format derives on all platform types (hardware builds only).
# Activated by firmware's `hardware` feature via "platform/defmt".
defmt = ["dep:defmt"]

[dependencies.defmt]
workspace = true
optional = true

[lints]
workspace = true
