[package]
name = "playback"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
platform = { path = "../platform" }
nanomp3 = { workspace = true, optional = true }

[features]
default = []
std = []
mp3 = ["dep:nanomp3"]

[lints]
workspace = true
