[package]
name = "eink-emulator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Display specifications
eink-specs = { path = "../eink-specs" }

# Platform configuration
platform = { path = "../../platform" }

# Window & rendering (no GPU - more portable per research)
winit = "0.30.12"
softbuffer = "0.4.8"

# Graphics primitives
embedded-graphics = "0.8.1"

# Image export
image = "0.25.9"

# Async runtime (tokio — winit crate, desktop-native)
tokio = { version = "1.49", features = ["time"] }

# platform is an Embassy crate; its embassy-time usage requires a time-driver and
# timer queue in the link graph.
# `std`              → time driver (_embassy_time_now via std::thread)
# `generic-queue-8`  → software timer queue (_embassy_time_schedule_wake)
embassy-time = { workspace = true, features = ["std", "generic-queue-8"] }

# LUT serialization support
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Windows API for WndProc subclassing (WM_DPICHANGED fix).
# windows-sys is already a transitive dep of winit — this pins the same slot.
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",       # AdjustWindowRectExForDpi
] }

[dev-dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }

[features]
default = []
headless = []       # For CI/CD (per embedded-graphics-simulator pattern)
debug = []
keyboard-input = [] # Keyboard + scroll wheel → InputDevice events

[[example]]
name = "hello_window"
path = "examples/hello_window.rs"

[[example]]
name = "custom_lut_demo"
path = "examples/custom_lut_demo.rs"

[[example]]
name = "rotation_demo"
path = "examples/rotation_demo.rs"

[[example]]
name = "debug_demo"
path = "examples/debug_demo.rs"
required-features = ["debug"]
