[package]
name = "eink-specs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "E-ink display specifications for emulation and hardware abstraction"
repository = "https://github.com/yourusername/eink-emulator"
keywords = ["eink", "embedded", "display", "specifications"]
categories = ["embedded", "no-std"]

[dependencies]
# All features are optional - can be pure no_std
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
libm = "0.2"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
std = ["serde?/std"]
serde = ["dep:serde"]
