[package]
name = "eink-system"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Graphics primitives
embedded-graphics = "0.8.1"
heapless = "0.8"

# Only needed by example binaries — never activated during `cargo test`.
# Gated behind the `examples` feature and required-features on [[example]].
eink-emulator = { path = "../eink-emulator", optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt"] }

[features]
default = []
std = []
debug = []
# Pulls in eink-emulator for interactive example binaries only.
# Never enable this in production tests; the architecture CI step enforces this.
examples = ["dep:eink-emulator"]

[[example]]
name = "layout_demo"
path = "examples/layout_demo.rs"
required-features = ["examples"]
